--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,13 @@
                 </div>
             </div>
         </div>
+
+        <div id="game-over-screen">
+            <h1 id="game-over-heading"></h1>
+            <div id="game-over-message"></div>
+            <button id="restart-button" class="btn btn-primary">Restart</button>
+            <button id="main-menu-button" class="btn btn-primary">Back to Main Menu</button>
+        </div>
     </div>
 
     <!-- Scripts -->
