--- a/public/index.html
+++ b/public/index.html
@@ -58,9 +58,11 @@
         </div>
 
         <div id="game-over-screen">
+            <div id="game-over-navbar">
+                <div id="gameroom-id"></div>
+            </div>
             <h1 id="game-over-heading"></h1>
             <div id="game-over-message"></div>
-            <button id="restart-button" class="btn btn-primary">Restart</button>
             <button id="main-menu-button" class="btn btn-primary">Back to Main Menu</button>
         </div>
     </div>
