--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;900&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" media="screen and (max-width: 480px) and (orientation:portrait)"
+        href="css/mobile_styles.css">
     <title>Tic-Tac-Toe</title>
 </head>
 
